# sheep

./: .gitignore  CMakeLists.txt  INSTALL  README.md  main.c
examples/: test.sp
include/: expression.h  heap.h
parser/: lexer.l  parser.y
src/: expression.c  heap.c  main.c
